Petit ajout bis made in Marjo
still a journalist...

--- a/p5-js/Play-01/index.html
+++ b/p5-js/Play-01/index.html
@@ -12,5 +12,6 @@
 
 <body>
 	<h1> Il manque un peu de texte sur cette page...</h1>
+		<p> Enfin... j'espère que j'ai pas touché au master...</p>
 </body>
 </html>
